# DRFTemplate

./: README.md  manage.py  pyproject.toml
apps/app_1/: apps.py
apps/app_2/: apps.py
apps/app_3/: apps.py
apps/authentication/: audit.py  urls.py
apps/core/classes/: singleton.py
apps/core/paginations/: large.py  small.py  standard.py
apps/core/utils/: choices.py  func.py
apps/task/management/commands/: cmd_test.py
drf_template/: asgi.py  environment.py  settings.py  urls.py  wsgi.py
drf_template/loggers/: dev.py  pro.py
drf_template/settings/: dev.py  pro.py
